preventing wrapping navbar

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -52,7 +52,8 @@
 	justify-content: center;
 	align-items: center;
 	margin: 0 100px 0 0;
-	flex: 3;
+	flex: 1;
+	white-space: nowrap;
 }
 
 .list {
